--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.0.1'//for location
     compile 'com.google.android.gms:play-services-maps:11.0.1'//for maps
     compile 'com.google.android.gms:play-services-places:11.0.1'//for places
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
+    implementation 'com.google.api-client:google-api-client-android:1.23.0'
 }
